# rubc

./: .gitattributes  Cargo.toml  README.md  justfile  test.json
assets/cpu_instrs/individual/: 02-interrupts.gb.txt
assets/default_rom/: Makefile  default_rom.gb  default_rom.map
assets/sm83/v1/: 01.json  30.json  31.json  88.json
rubc/: Cargo.toml
rubc-cli/: Cargo.toml
rubc-cli/src/: main.rs
rubc-core/: Cargo.toml
rubc-core/src/: bits.rs  cartridge.rs  gameboy.rs  globals.rs  lib.rs  logger.rs  mbc.rs  opcodes.rs  opcodes_cb.rs  utils.rs
rubc-core/tests/: opcode_test.rs  utils_test.rs
rubc/src/: gameboy.rs  globals.rs  gui.rs  main.rs  opcodes.rs  opcodes_cb.rs
rubc/tests/: opcode_test.rs
src/: bits.rs  gameboy.rs  globals.rs  main.rs  motherboard.rs  opcodes.rs  opcodes_cb.rs  utils.rs
src/tests/: mod.rs  opcode_test.rs
