[package]
name = "rubc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
fern = { version = "0.6.2", features = ["chrono", "colored"] }
itertools = "0.12.1"
log = "0.4.20"
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
serde = { version = "1.0.196", features = ["rc", "serde_derive"] }
serde_json = "1.0.113"
criterion = { version = "0.5.1", features = ["html_reports"] }
prettytable-rs = "0.10.0"


[dev-dependencies]
serde = { version = "1.0.196", features = ["rc", "serde_derive"] }
serde_json = "1.0.113"
