[package]
name = "rubc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
egui = "0.23"
egui-wgpu = "0.23"
egui-winit = { version = "0.23", default-features = false, features = ["links"] }
log = "0.4.20"
# pixels = "0.13.0"
pixels = {git = "https://github.com/parasyte/pixels/", branch = "main"}
rubc-core = { path = "../rubc-core" }
winit = "0.28"
winit_input_helper = "0.14"
